--- a/webpack/src/css/main.css
+++ b/webpack/src/css/main.css
@@ -1,4 +1,9 @@
 h1{
     font-size: 50px;
-    color: red;
-}
+    color: blue;
+  }
+  #div1{
+    width: 300px;
+    height: 300px;
+    background-image: url('../image/slider3.jpg');
+  }
