--- a/webpack/src/css/main.css
+++ b/webpack/src/css/main.css
@@ -1,9 +1,21 @@
 h1{
-    font-size: 50px;
-    color: blue;
-  }
-  #div1{
-    width: 300px;
-    height: 300px;
-    background-image: url('../image/slider3.jpg');
-  }
+  font-size: 50px;
+  color    : blue;
+}
+#div1{
+  width           : 300px;
+  height          : 300px;
+  background-image: url('../image/slider3.jpg');
+}
+::placeholder{
+  background-color: red;
+}
+.testaaa{
+  color: red
+}
+#div3{
+  color: #000;
+}
+#span1{
+  color: red;
+}
